mispelled ref to example.css

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Sass adaptive grid examples</title>
-	<link rel="stylesheet" href="examples.css" type="text/css">
+	<link rel="stylesheet" href="example.css" type="text/css">
 </head>
 <body>
 
